--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,8 @@
     <head>
       <meta charset="UTF-8">
       <title>React App - <%= htmlWebpackPlugin.options.name %></title>
+      
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     </head>
 
     <body>
